correcting /etc/localtime stacktrace in latest mono release
mono started throwing the following error after upgrading to
4.8.1.0:

EPIC FAIL: System.IO.FileNotFoundException: Could not find file
"/etc/localtime"

to work around this, lets mount /etc/localtime in (r)ead(o)nly from
the local system.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     ports:
       - 7878:7878
     volumes:
+      - /etc/localtime:/etc/localtime:ro
       - /data/radarr/config:/volumes/config/radarr
       - /data/radarr/movies:/volumes/media
       - /data/downloads/complete:/data/downloads/complete
